--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>Survey Incentives</title>
 <style>
     html {
       font-family: sans-serif;
@@ -35,86 +35,25 @@
   </head>
   <body>
     <main>
-        <h1>Survey Topic Key</h1>  
-	This table is available to remind you of the statements that each topic relates to. This may help to guide your choices about how important the overall topic is to you (or other students), and how often you (or other students) discuss it with other students.
+        <h1>Survey Incentives</h1>  
+	There are two types of questions which affect your bonus - each type has its own scoring rule.
 <table>
 	<tr>
-		<th> Short topic</th>
-		<th> Long statement</th>
+		<th> Question type</th>
+		<th> Points earned</th>
 	</tr>
 	<tr>
-		<td>Gender equality</td>
-		<td>The government and companies should give priority to women when hiring for leadership positions.</td>
+		<td>Guess the correct number.</td>
+		<td> Higher of (100 - (guess - true value)\00B2) and 0 points. </td>
 	</tr>
 	<tr>
-		<td>Illegal immigration</td>
-		<td>People who immigrated to the U.K. illegally, when caught, should be deported and sent back to their countries of origin.</td>
+		<td>Guess the correct multiple choice answer.</td>
+		<td>100 points for correct guess, 0 otherwise.</td>
 	</tr>
-	<tr>
-		<td>Sexual harrassment</td>
-		<td>Sexual harassment training should be mandated for anyone who works or studies at the University of Nottingham.</td>
-	</tr>
-	<tr>
-		<td>Personal pronoun use</td>
-		<td>The University of Nottingham should require professors to address students according to the students' preferred gender pronouns.</td>
-	</tr>
-	<tr>
-		<td>Gender correcting procedures</td>
-		<td>Children under 18 should have access to gender-correcting medical procedures.</td>
-	</tr>
-	<tr>
-		<td>Israel-Palestine conflict</td>
-		<td>Israel's previous activity in Gaza and the West Bank justify Hamas' actions.</td>
-	</tr>
-	<tr>
-		<td>Assisted suicide</td>
-		<td>Assisted suicide should be legal for individuals suffering from a terminal illness.</td>
-	</tr>
-	<tr>
-		<td>Gender roles</td>
-		<td>A woman's most important role is being a good homemaker.</td>
-	</tr>
-	<tr>
-		<td>TikTok and banning TikTok</td>
-		<td>The United Kingdom should follow the US in moving to ban TikTok.</td>
-	</tr>
-	<tr>
-		<td>Just Stop Oil</td>
-		<td>Traffic blockades by groups like `Just Stop Oil' are an appropriate form of protest.</td>
-	</tr>
-	<tr>
-		<td>Abortion rights</td>
-		<td>The legal time limit of 24 weeks to have an abortion should be reduced.</td>
-	</tr>
-	<tr>
-		<td>Colonisation</td>
-		<td>Countries colonised by Britain are better off because of their colonisation.</td>
-	</tr>
-	<tr>
-		<td>The British Museum and its artefacts</td>
-		<td>The British Museum should return historical and cultural artifacts to their countries of origin.</td>
-	</tr>
-	<tr>
-		<td>Climate change</td>
-		<td>I would be willing to contribute 1% of my income every month to fight global warming.</td>
-	</tr>
-	<tr>
-		<td>Smartphone use by children</td>
-		<td>Parents should limit the amount of time their kids spend on their smartphones.</td>
-	</tr>
-	<tr>
-		<td>Import tariffs</td>
-		<td>The United Kingdom should increase tariffs on foreign imports.</td>
-	</tr>
-	<tr>
-		<td>Palestinian recognition</td>
-		<td>The UK government should officially recognise Palestine as a state.</td>
-	</tr>
-	<tr>
-		<td>Changing the voting age</td>
-		<td>The voting age should be reduced to 16 years of age.</td>
-	</tr>
-</table.
+</table>
+Note that the rule for questions asking for numerical guesses give points for any guess within 9 percentage points of the true value.
+<br>
+Your probability of winning the bonus is equal to your average score for every question which affects the bonus odds divided by 400.
     </main>
     <script src="index.js"></script>
   </body>
