--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	</tr>
 	<tr>
 		<td>Guess the correct number.</td>
-		<td> Higher of (100 - (guess - true value)\00B2) and 0 points. </td>
+		<td> Higher of (100 - (guess - true value)&sup2;) and 0 points. </td>
 	</tr>
 	<tr>
 		<td>Guess the correct multiple choice answer.</td>
